--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "predeploy": "ng build --configuration production --base-href \"/E-Shower-Cabin/\"",
+    "deploy": "npx angular-cli-ghpages --dir=dist/bain-et-cuisine",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -25,6 +27,7 @@
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "~17.3.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
